[SaiVijayaKumar]Adding:Generated token by useing jwt token and refactore the code of other api

--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "UserDbconnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundooNotes;Integrated Security=True" }
+  "ConnectionStrings": { "UserDbconnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundooNotes;Integrated Security=True" },
+  "SecretKey": "ThisismySecretKeyforJWTTokengeneration=="
 }
