[SaiVijayaKumar]Adding:Added Image and Remove Image API

--- a/FundooNotes/appsettings.json
+++ b/FundooNotes/appsettings.json
@@ -8,5 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": { "UserDbconnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundooNotes;Integrated Security=True" },
-  "SecretKey": "ThisismySecretKeyforJWTTokengeneration=="
+  "SecretKey": "ThisismySecretKeyforJWTTokengeneration==",
+  "CloudinaryAccount": {
+    "CloudName": "vijaycloud212",
+    "ApiKey": "756845353218878",
+    "ApiSecret": "sxsMdbLZGC7ouStA31q3Cp3pbpU"
+  }
 }
